📝 reworded daughter or son probability puzzle, and dark room deck

--- a/src/data/puzzles/25.md
+++ b/src/data/puzzles/25.md
@@ -6,17 +6,50 @@ category: "probability"
 ---
 
 ## Question
-Sheldon says "Suppose I have two children. Younger one is a girl". What is the probability that both children are girls?
+This is a 3 part question. Assume the gender of a child can be either Boy or Girl, equally likely.
 
-"Forget all that, and suppose I have two children, and atleast one of them is a boy". Find probability of two boys.
 
-"Suppose I have two kids, lets call them Bouba and Kiki", says Dr. Cooper, "and suppose Bouba is a girl !" What is the probability that I have two daughters?"
+1. Suppose I have two children. Younger one is a girl. What is the probability that both children are girls?
+
+2. Suppose I have two children, and atleast one of them is a boy. Find the probability that both of them are boys.
+
+3. Suppose I have two kids, lets call them X and Y. Suppose X is a girl. What is the probability that I have two daughters?
 
 ## Hint
+(1) and (3) are same. (2) is different.
 
 
 ## Answer
-1/2, 1/3, 1/3
+1/2, 1/3, 1/2
 
 ## Solution
-First and second are un-ambiguous. Third is debatable as per the interpretation. I believed 1/3, as the names Cooper used were anonymous, and should have given no extra information. But it turns out that Cooper did provide some extra information. He had actually fixed a person (A). Also, calculating the probability in part 3 using conditionals will give 1/2.
+
+1. Since it is already known that younger one is a girl, we just need the probability that older one is also a girl. This is simply $1/2$ since both genders are equally likely as per the assumption in the question.
+2. Without any information, there are 4 equally likely possibilities (BB, BG, GB, GG) for the genders of the two children. Since atleast-one of them is a boy, we can remove the GG case from our sample space. Now there are 3 possibilities, and all three are equally likely, hence the probability that both the children are girls is $1/3$
+3. This is counter-intuitive. One might say that since the names (X, Y) were anonymous, this problem should have been same as the second problem. But it turns out that there is indeed some extra information, which changes the probability. Author has actually fixed a person (X), and X's gender is "G" from now on. Thus we only need to find the probability that Y's gender is "G".
+
+
+It still confuses me how statment (2) and statement (3) are different statements, leading to different outcomes. Statement (1) is equivalent to statement (3).
+
+---
+
+### Conditional Probability
+
+We can also calculate the second answer using conditional probability. We can denote:
+
+$A$: the event that at least one child is a boy.
+
+$B$: the event that both children are boys.
+
+We want to find the probability of event $B$, given that $A$ has ocurred.
+Using conditional probability formula:
+
+$$
+P(B | A) = \frac{P(B \cap A)}{P(A)}
+$$
+
+Here $P(B \cap A) = P(B) = 1/4$ (both $B$ and $A$ are true when $B$ is true)
+
+$P(A)=3/4$ (amongst 4 equally likely cases, 3 are favourable)
+
+overall, $P(B | A) = \dfrac{1/4}{3/4} = 1/3$
