--- a/src/data/puzzles/26.md
+++ b/src/data/puzzles/26.md
@@ -6,14 +6,24 @@ category: "general"
 ---
 
 ## Question
-In a dark room, there is a deck of 52 cards, with exactly 10 cards facing up, rest facing down. You need to split this into two decks with equal number of cards facing up!
+In a dark room, there is a deck of 52 cards, with exactly 10 cards facing up, rest are facing down. You can touch the cards with your hands but cannot sense which cards are facing up/down. You need to split all these cards into two decks with equal number of cards facing up!
 
 ## Hint
-The question can be solved even when up facing cards are 11. The split decks need not have equal number of up-facing cards.
-
+We never said that both the final decks must have 5 cards each facing up.
 
 ## Answer
+Create a deck of 10 cards randomly from the original 52-card deck. And then turn over the 10-card deck.
 
 
 ## Solution
-Create a deck of k cards randomly from the original 52-card deck, (k=10 here) and then turn over the k-card deck. Goal is achieved!
+This puzzle involves a trick, i.e, we can manually flip over any number of cards.
+
+We create a deck of $k=10$ cards randomly selected from the deck.
+
+Suppose the $k$-card deck included $x$ number of cards that were originally facing up, and $k-x$ cards are facing up in the other deck.
+
+By flipping over this $k$-card deck, now there are exactly $k-x$ cards facing up in this deck, same as the other deck.
+
+--- 
+This question can be solved regardless of the original number $k=10$, as long as we know the count of cards facing up.
+
