📝 improved solution for bulb sequence

--- a/src/data/puzzles/18.md
+++ b/src/data/puzzles/18.md
@@ -6,21 +6,61 @@ category: "general"
 ---
 
 ## Question
-Light bulbs are numbered 1 to 100, and kept off initially. The first person comes and toggles all the bulbs which are multiple of 1, i.e. they switch all bulbs to 'ON'. The second person toggles all multiples of 2, i.e. they turn the even bulbs 'OFF'. The third person comes and toggles all multiples of 3. This process continues till the $100^{\text{th}}$ person do their part. After this, how many bulbs are 'ON'?
+There are 100 Light bulbs in a sequence, all kept in `OFF` state. The first person comes and toggles all the bulbs which are at position that is multiple of $1$, i.e. switch all bulbs to `ON`. The second person toggles all multiples of $2$, i.e. turn the even numbered bulbs `OFF` and leave the odd ones as is. The third person comes and toggles all multiples of $3$. This process continues till the $100^{\text{th}}$ person do their part. After this, how many bulbs are in `ON` state?
 
 ## Hint
-Consider bulb number 9.
+Consider bulb number 1 and 4, how is its outcome different than the others.
 
 ## Answer
 10 bulbs
 
 ## Solution
-We notice that for a perfect square (like 9), the number of factors is always odd, for example The number of factors of (16) = # [1,2,4,8,16] = 5
-Note that for non-square numbers, factors are always even. 
 
-A bulb $K$ is toggled between ON / OFF states only by the person with a factor of $K$. Bulb number 9 will be toggled by 1,3 & 9.  Thus bulb number 9 will be 'ON', 'OFF' and 'ON' respectively. Because of odd factors, the bulb stays 'ON' at the end.
+### Observation
+Draw a small grid of 6x6 on a piece of paper and simulate the outcome.
 
-All the perfect-square numbered bulbs (odd factors) will stay 'ON', and the rest bulbs will turn OFF at the end.
+Observe that each bulb is toggled as many times as many unique divisors it has.
+For example, bulb number 6 has divisors [1,2,3,6], so it is toggled back and forth by person number [1,2,3,6], i.e, 4 times.
+
+In this case, only the bulb number $1$ and $4$ are `ON` at the end of 6 steps, and they have odd number of divisors. Can it be that perfect square number have odd unique divisors?
+
+Checking for some more numbers: 
+
+- Divisors for $9$ are $[1,3,9]$, hence $3$ toggles
+- Divisors for $16$ are $[1,2,4,8,16]$, hence $5$ toggles
+
+
+Hence we form a conjecture: For perfect squared numbers, the count of unique factors is always odd.
+
+Proof: Divisors always found in pairs. If a number $K$ is divisible by $d_1$ then we also find another divisor $d_2 = K/d_1$. The divisor count would increase by 2, unless $d_1 = d_2$ which happens exactly once for a perfect square and never for any other number.
+
+Note that for a non-square number, the count of unique divisors are always even.
+
+A bulb at position $K$ is toggled between `ON` / `OFF` states only by the person whose number is divisor of $K$. When $K$ is a perfect square number then the bulb will be `ON` at the end because of the odd sequence of toggling. For all the other numbers, the bulb will be `OFF` because of the even sequence of toggling.
+
 Thus bulbs 1,4,9....81,100 are ON, at the end.
 
 Hence 10 bulbs are on.
+
+### Generalization
+
+If there are $n$ bulbs in a sequence and $n$ people, then the number of bulbs that are `ON` at the end is $\lfloor \sqrt{n} \rfloor$
+
+
+### Divisor Formula
+
+
+Let $n$ be a positive integer and $n = p_1^{e_1} \cdot p_2^{e_2} \cdots p_k^{e_k}$ is the prime factorization of $n$
+
+In how many different ways can we form a divisor?
+
+Let $d$ be a divisor of $n$, $d = p_1^{a_1} \cdot p_2^{a_2} \cdots p_k^{a_k}$ where $0 \le a_i \le e_1$. 
+
+Thus, there are $e_i + 1$ choices for each prime factor $p_i$ to be part of the divisor, indepdently for each $i$.
+
+Thus, the total number of divisors of $n$ is given by
+$$ \tau(n) = (e_1 + 1)(e_2 + 1) \cdots (e_k + 1) $$
+
+
+If $n$ is a perfect square, then each $e_i$ is even, so $e_i + 1$ is odd. Therefore, the product $(e_1 + 1)(e_2 + 1) \cdots (e_k + 1)$ is odd.
+
