--- a/src/data/puzzles/18.md
+++ b/src/data/puzzles/18.md
@@ -32,7 +32,7 @@ Checking for some more numbers:
 
 Hence we form a conjecture: For perfect squared numbers, the count of unique factors is always odd.
 
-Proof: Divisors always found in pairs. If a number $K$ is divisible by $d_1$ then we also find another divisor $d_2 = K/d_1$. The divisor count would increase by 2, unless $d_1 = d_2$ which happens exactly once for a perfect square and never for any other number.
+Proof: Divisors are always found in pairs. For number $K$ if we find one divisor $d_1$ then we also just found another divisor $d_2 = K/d_1$. The divisor count would increase by 2, unless $d_1 = d_2$ which happens exactly once for a perfect square and never for any other number.
 
 Note that for a non-square number, the count of unique divisors are always even.
 
@@ -54,11 +54,12 @@ Let $n$ be a positive integer and $n = p_1^{e_1} \cdot p_2^{e_2} \cdots p_k^{e_k
 
 In how many different ways can we form a divisor?
 
-Let $d$ be a divisor of $n$, $d = p_1^{a_1} \cdot p_2^{a_2} \cdots p_k^{a_k}$ where $0 \le a_i \le e_1$. 
+Let $d$ be a divisor of $n$, $d = p_1^{a_1} \cdot p_2^{a_2} \cdots p_k^{a_k}$ where $0 \le a_i \le e_i$. 
 
-Thus, there are $e_i + 1$ choices for each prime factor $p_i$ to be part of the divisor, indepdently for each $i$.
+Thus, there are $e_i + 1$ choices for each prime factor $p_i$, indepdently for each $i$.
 
 Thus, the total number of divisors of $n$ is given by
+
 $$ \tau(n) = (e_1 + 1)(e_2 + 1) \cdots (e_k + 1) $$
 
 
